src/main/antlr4/es/uva/inf/grammar/.antlr/BazacoParser.java
// Generated from c:\Users\Propietario\Documents\DOCUMENTOS-TFG\MVN-Bazaco\mvnbazaco\src\main\antlr4\es\u005Cuva\inf\grammar\bazaco\Bazaco.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BazacoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, CommentOrEncoding=44, 
		Group=45, Star=46, Div=47, Less=48, LessEqual=49, Greater=50, GreaterEqual=51, 
		Equal=52, TwoEqual=53, NotEqual=54, Exclamation=55, DataEquationOp=56, 
		StringAssignOp=57, Id=58, FloatingConstNumber=59, FractionalConstant=60, 
		ExponentPart=61, DigitSeq=62, StringLiteral=63, StringConst=64, Keyword=65, 
		Whitespace=66, Backslash=67, INFO_UNIT=68, OtherCaracter=69;
	public static final int
		RULE_file = 0, RULE_model = 1, RULE_symbolWithDoc = 2, RULE_symbolWithDocDefinition = 3, 
		RULE_subscriptRange = 4, RULE_subscriptSequence = 5, RULE_subscriptMappingList = 6, 
		RULE_subscriptMapping = 7, RULE_equation = 8, RULE_lhs = 9, RULE_subscriptCopy = 10, 
		RULE_unchangeableConstant = 11, RULE_dataEquation = 12, RULE_lookupDefinition = 13, 
		RULE_constraint = 14, RULE_realityCheck = 15, RULE_stringAssign = 16, 
		RULE_macroDefinition = 17, RULE_expr = 18, RULE_exprAllowSign = 19, RULE_call = 20, 
		RULE_macroHeader = 21, RULE_macroArguments = 22, RULE_exprList = 23, RULE_subscriptValueList = 24, 
		RULE_indexList = 25, RULE_subscript = 26, RULE_lookup = 27, RULE_lookupRange = 28, 
		RULE_lookupPointList = 29, RULE_referenceLine = 30, RULE_lookupPoint = 31, 
		RULE_constantLine = 32, RULE_constList = 33, RULE_numberList = 34, RULE_sketchInfo = 35, 
		RULE_versionCode = 36, RULE_viewNumber = 37, RULE_viewSettings = 38, RULE_points = 39, 
		RULE_viewX = 40, RULE_quince = 41, RULE_objectVariable = 42, RULE_viewInfo = 43, 
		RULE_sketches = 44, RULE_graphs = 45, RULE_graphDelimiter = 46, RULE_graph = 47, 
		RULE_title = 48, RULE_xaxis = 49, RULE_yaxis = 50, RULE_xmin = 51, RULE_xmax = 52, 
		RULE_nolegend = 53, RULE_scale = 54, RULE_graphvar = 55, RULE_gvar = 56, 
		RULE_ymin = 57, RULE_ymax = 58, RULE_linewidthgraph = 59, RULE_metadata = 60, 
		RULE_subscriptId = 61, RULE_constVensim = 62, RULE_integerConst = 63, 
		RULE_floatingConst = 64, RULE_unitsDoc = 65;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "model", "symbolWithDoc", "symbolWithDocDefinition", "subscriptRange", 
			"subscriptSequence", "subscriptMappingList", "subscriptMapping", "equation", 
			"lhs", "subscriptCopy", "unchangeableConstant", "dataEquation", "lookupDefinition", 
			"constraint", "realityCheck", "stringAssign", "macroDefinition", "expr", 
			"exprAllowSign", "call", "macroHeader", "macroArguments", "exprList", 
			"subscriptValueList", "indexList", "subscript", "lookup", "lookupRange", 
			"lookupPointList", "referenceLine", "lookupPoint", "constantLine", "constList", 
			"numberList", "sketchInfo", "versionCode", "viewNumber", "viewSettings", 
			"points", "viewX", "quince", "objectVariable", "viewInfo", "sketches", 
			"graphs", "graphDelimiter", "graph", "title", "xaxis", "yaxis", "xmin", 
			"xmax", "nolegend", "scale", "graphvar", "gvar", "ymin", "ymax", "linewidthgraph", 
			"metadata", "subscriptId", "constVensim", "integerConst", "floatingConst", 
			"unitsDoc"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'('", "'-'", "')'", "'->'", "','", "':IGNORE:'", "':EXCEPT:'", 
			"'<->'", "':THE CONDITION:'", "':IMPLIES:'", "':TEST INPUT:'", "':MACRO:'", 
			"':END OF MACRO:'", "'^'", "'+'", "':AND:'", "':OR:'", "'DELAYP('", "'TABBED ARRAY('", 
			"'['", "']'", "';'", "'---///'", "'Sketch information - do not modify anything except names'", 
			"'V300  Do not put anything below this section - it will be ignored'", 
			"'*View'", "'$'", "'|'", "'///---'", "':GRAPH'", "':TITLE'", "':X-AXIS'", 
			"':Y-AXIS'", "':X-MIN'", "':X-MAX'", "':NO-LEGEND'", "':SCALE'", "':VAR'", 
			"':Y-MIN'", "':Y-MAX'", "':LINE-WIDTH'", "':L\u007F<%^E!@'", null, null, 
			"'*'", "'/'", "'<'", "'<='", "'>'", "'>='", "'='", "'=='", "'<>'", "'!'", 
			"':='", "':IS:'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "CommentOrEncoding", 
			"Group", "Star", "Div", "Less", "LessEqual", "Greater", "GreaterEqual", 
			"Equal", "TwoEqual", "NotEqual", "Exclamation", "DataEquationOp", "StringAssignOp", 
			"Id", "FloatingConstNumber", "FractionalConstant", "ExponentPart", "DigitSeq", 
			"StringLiteral", "StringConst", "Keyword", "Whitespace", "Backslash", 
			"INFO_UNIT", "OtherCaracter"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Bazaco.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BazacoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public ModelContext model() {
			return getRuleContext(ModelContext.class,0);
		}
		public TerminalNode EOF() { return getToken(BazacoParser.EOF, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			model();
			setState(133);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelContext extends ParserRuleContext {
		public SketchesContext sketches() {
			return getRuleContext(SketchesContext.class,0);
		}
		public GraphDelimiterContext graphDelimiter() {
			return getRuleContext(GraphDelimiterContext.class,0);
		}
		public MetadataContext metadata() {
			return getRuleContext(MetadataContext.class,0);
		}
		public List<SymbolWithDocContext> symbolWithDoc() {
			return getRuleContexts(SymbolWithDocContext.class);
		}
		public SymbolWithDocContext symbolWithDoc(int i) {
			return getRuleContext(SymbolWithDocContext.class,i);
		}
		public List<MacroDefinitionContext> macroDefinition() {
			return getRuleContexts(MacroDefinitionContext.class);
		}
		public MacroDefinitionContext macroDefinition(int i) {
			return getRuleContext(MacroDefinitionContext.class,i);
		}
		public List<GraphsContext> graphs() {
			return getRuleContexts(GraphsContext.class);
		}
		public GraphsContext graphs(int i) {
			return getRuleContext(GraphsContext.class,i);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12 || _la==Id) {
				{
				setState(137);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Id:
					{
					setState(135);
					symbolWithDoc();
					}
					break;
				case T__12:
					{
					setState(136);
					macroDefinition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			sketches();
			setState(143);
			graphDelimiter();
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__30) {
				{
				{
				setState(144);
				graphs();
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			metadata();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolWithDocContext extends ParserRuleContext {
		public SymbolWithDocDefinitionContext symbolWithDocDefinition() {
			return getRuleContext(SymbolWithDocDefinitionContext.class,0);
		}
		public UnitsDocContext unitsDoc() {
			return getRuleContext(UnitsDocContext.class,0);
		}
		public SymbolWithDocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolWithDoc; }
	}

	public final SymbolWithDocContext symbolWithDoc() throws RecognitionException {
		SymbolWithDocContext _localctx = new SymbolWithDocContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_symbolWithDoc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			symbolWithDocDefinition();
			setState(153);
			unitsDoc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolWithDocDefinitionContext extends ParserRuleContext {
		public LookupDefinitionContext lookupDefinition() {
			return getRuleContext(LookupDefinitionContext.class,0);
		}
		public SubscriptRangeContext subscriptRange() {
			return getRuleContext(SubscriptRangeContext.class,0);
		}
		public EquationContext equation() {
			return getRuleContext(EquationContext.class,0);
		}
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public UnchangeableConstantContext unchangeableConstant() {
			return getRuleContext(UnchangeableConstantContext.class,0);
		}
		public DataEquationContext dataEquation() {
			return getRuleContext(DataEquationContext.class,0);
		}
		public StringAssignContext stringAssign() {
			return getRuleContext(StringAssignContext.class,0);
		}
		public SubscriptCopyContext subscriptCopy() {
			return getRuleContext(SubscriptCopyContext.class,0);
		}
		public RealityCheckContext realityCheck() {
			return getRuleContext(RealityCheckContext.class,0);
		}
		public SymbolWithDocDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolWithDocDefinition; }
	}

	public final SymbolWithDocDefinitionContext symbolWithDocDefinition() throws RecognitionException {
		SymbolWithDocDefinitionContext _localctx = new SymbolWithDocDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_symbolWithDocDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(155);
				lookupDefinition();
				}
				break;
			case 2:
				{
				setState(156);
				subscriptRange();
				}
				break;
			case 3:
				{
				setState(157);
				equation();
				}
				break;
			case 4:
				{
				setState(158);
				constraint();
				}
				break;
			case 5:
				{
				setState(159);
				unchangeableConstant();
				}
				break;
			case 6:
				{
				setState(160);
				dataEquation();
				}
				break;
			case 7:
				{
				setState(161);
				stringAssign();
				}
				break;
			case 8:
				{
				setState(162);
				subscriptCopy();
				}
				break;
			case 9:
				{
				setState(163);
				realityCheck();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptRangeContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(BazacoParser.Id, 0); }
		public SubscriptSequenceContext subscriptSequence() {
			return getRuleContext(SubscriptSequenceContext.class,0);
		}
		public SubscriptValueListContext subscriptValueList() {
			return getRuleContext(SubscriptValueListContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public SubscriptMappingListContext subscriptMappingList() {
			return getRuleContext(SubscriptMappingListContext.class,0);
		}
		public SubscriptRangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptRange; }
	}

	public final SubscriptRangeContext subscriptRange() throws RecognitionException {
		SubscriptRangeContext _localctx = new SubscriptRangeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_subscriptRange);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(Id);
			setState(167);
			match(T__0);
			setState(171);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(168);
				subscriptSequence();
				}
				break;
			case 2:
				{
				setState(169);
				subscriptValueList();
				}
				break;
			case 3:
				{
				setState(170);
				call();
				}
				break;
			}
			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(173);
				subscriptMappingList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptSequenceContext extends ParserRuleContext {
		public Token start;
		public Token end;
		public List<TerminalNode> Id() { return getTokens(BazacoParser.Id); }
		public TerminalNode Id(int i) {
			return getToken(BazacoParser.Id, i);
		}
		public SubscriptSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptSequence; }
	}

	public final SubscriptSequenceContext subscriptSequence() throws RecognitionException {
		SubscriptSequenceContext _localctx = new SubscriptSequenceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subscriptSequence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(T__1);
			setState(177);
			((SubscriptSequenceContext)_localctx).start = match(Id);
			setState(178);
			match(T__2);
			setState(179);
			((SubscriptSequenceContext)_localctx).end = match(Id);
			setState(180);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptMappingListContext extends ParserRuleContext {
		public List<SubscriptMappingContext> subscriptMapping() {
			return getRuleContexts(SubscriptMappingContext.class);
		}
		public SubscriptMappingContext subscriptMapping(int i) {
			return getRuleContext(SubscriptMappingContext.class,i);
		}
		public SubscriptMappingListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptMappingList; }
	}

	public final SubscriptMappingListContext subscriptMappingList() throws RecognitionException {
		SubscriptMappingListContext _localctx = new SubscriptMappingListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_subscriptMappingList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(T__4);
			setState(183);
			subscriptMapping();
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(184);
				match(T__5);
				setState(185);
				subscriptMapping();
				}
				}
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptMappingContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(BazacoParser.Id, 0); }
		public IndexListContext indexList() {
			return getRuleContext(IndexListContext.class,0);
		}
		public SubscriptMappingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptMapping; }
	}

	public final SubscriptMappingContext subscriptMapping() throws RecognitionException {
		SubscriptMappingContext _localctx = new SubscriptMappingContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_subscriptMapping);
		try {
			setState(198);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Id:
				enterOuterAlt(_localctx, 1);
				{
				setState(191);
				match(Id);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(192);
				match(T__1);
				setState(193);
				match(Id);
				setState(194);
				match(T__0);
				setState(195);
				indexList();
				setState(196);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquationContext extends ParserRuleContext {
		public LhsContext lhs() {
			return getRuleContext(LhsContext.class,0);
		}
		public TerminalNode Equal() { return getToken(BazacoParser.Equal, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ConstListContext constList() {
			return getRuleContext(ConstListContext.class,0);
		}
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public EquationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equation; }
	}

	public final EquationContext equation() throws RecognitionException {
		EquationContext _localctx = new EquationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_equation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200);
			lhs();
			setState(201);
			match(Equal);
			setState(204);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(202);
				expr(0);
				}
				break;
			case 2:
				{
				setState(203);
				constList();
				}
				break;
			}
			setState(208);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(206);
				match(T__6);
				setState(207);
				exprList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LhsContext extends ParserRuleContext {
		public SubscriptContext indexes;
		public TerminalNode Id() { return getToken(BazacoParser.Id, 0); }
		public TerminalNode Keyword() { return getToken(BazacoParser.Keyword, 0); }
		public List<SubscriptContext> subscript() {
			return getRuleContexts(SubscriptContext.class);
		}
		public SubscriptContext subscript(int i) {
			return getRuleContext(SubscriptContext.class,i);
		}
		public LhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lhs; }
	}

	public final LhsContext lhs() throws RecognitionException {
		LhsContext _localctx = new LhsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lhs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(210);
			match(Id);
			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__20) {
				{
				setState(211);
				((LhsContext)_localctx).indexes = subscript();
				}
			}

			setState(215);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Keyword) {
				{
				setState(214);
				match(Keyword);
				}
			}

			setState(226);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(217);
				match(T__7);
				setState(218);
				subscript();
				setState(223);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(219);
					match(T__5);
					setState(220);
					subscript();
					}
					}
					setState(225);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptCopyContext extends ParserRuleContext {
		public Token copy;
		public Token original;
		public List<TerminalNode> Id() { return getTokens(BazacoParser.Id); }
		public TerminalNode Id(int i) {
			return getToken(BazacoParser.Id, i);
		}
		public SubscriptCopyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptCopy; }
	}

	public final SubscriptCopyContext subscriptCopy() throws RecognitionException {
		SubscriptCopyContext _localctx = new SubscriptCopyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_subscriptCopy);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(228);
			((SubscriptCopyContext)_localctx).copy = match(Id);
			setState(229);
			match(T__8);
			setState(230);
			((SubscriptCopyContext)_localctx).original = match(Id);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
